--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "veur",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "View service.",
   "main": "veur.js",
   "scripts": {
@@ -16,29 +16,32 @@
     "veur"
   ],
   "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+  "contributors": [
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/volkovasystems/veur/issues"
   },
   "homepage": "https://github.com/volkovasystems/veur#readme",
   "dependencies": {
-    "clazof": "^0.14.0",
+    "clazof": "^0.18.0",
     "express": "^4.15.2",
     "express-rate-limit": "^2.6.0",
-    "falze": "^0.16.0",
-    "falzy": "^0.15.0",
+    "falze": "^0.19.0",
+    "falzy": "^0.17.0",
     "handlebars": "^4.0.6",
-    "harden": "^0.18.0",
-    "kein": "^0.14.0",
-    "kept": "^0.12.0",
-    "lilfy": "^0.8.0",
-    "lire": "^0.6.0",
-    "offcache": "^0.5.0",
-    "olivant": "^0.20.0",
-    "parseon": "^0.4.0",
-    "protype": "^0.19.0",
-    "stuffed": "^0.17.0",
-    "truly": "^0.15.0",
-    "truu": "^0.19.0"
+    "harden": "^0.21.0",
+    "kein": "^0.16.0",
+    "kept": "^0.14.0",
+    "lilfy": "^0.10.0",
+    "lire": "^0.7.0",
+    "offcache": "^0.7.0",
+    "olivant": "^0.21.0",
+    "parseon": "^0.6.0",
+    "protype": "^0.21.0",
+    "stuffed": "^0.19.0",
+    "truly": "^0.17.0",
+    "truu": "^0.22.0"
   }
 }
